# advent_of_code

./: .gitignore  README.md  notebooked9bea2e53.ipynb  pyproject.toml
2020/1/: Puzzle1.ipynb
2020/11/: Puzzle11.ipynb
2020/2/: Puzzle2.ipynb
2020/3/: Puzzle3.ipynb
2020/4/: P4_.csv  Puzzle4.ipynb
2020/5/: Puzzle5.ipynb
2020/6/: P6.csv  Puzzle6.ipynb
2020/7/: Puzzle7.ipynb
2020/8/: P8__.csv  Puzzle8.ipynb
2020/9/: Puzzle9.ipynb
2021/1/: 1.md  1a.py  1b.py
2021/2/: 2a.py  2b.py
2022/1/: day1.py
2022/2/: day2.py
2022/3/: day3.py
2024/1/: 1.py  2.py
2024/2/: 1.py  2.py
2024/3/: 1.py  2.py
2024/4/: 1.py  2.py
2024/5/: 1.py  2.py
2024/6/: 1.py  2.py
utils/: data.py  recursive_functions.py
