[project]
name = "advent_of_code"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mateusz Konopelski", email = "ml.konopelski@gmail.com"},
]
dependencies = ["numpy>=2.2.0", "pandas>=2.2.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
